objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Mandatory_picklist__c</fullName>
        <label>Mandatory picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Required_text_2__c</fullName>
        <label>Required text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_text__c</fullName>
        <label>Required text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>RT_campaing_member</fullName>
        <active>true</active>
        <label>RT campaing member</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>